infinite scroll on mobile, reset crate fix

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -9,12 +9,6 @@
       text-align: center;
       margin: 160px 0;
     }
-    .mobile-pagination {
-      display: none;
-      @include s768 {
-        display: block;
-      }
-    }
     @include s768 {
       .desktop-pagination {
         display: none;
